fixed UI issues

--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -2,13 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Gmail Clone - Professional Email Client" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="theme-color" content="#4285f4" />
+    <meta name="description" content="SMTP Mail Server - Professional Email Client" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Gmail SMTP-kunalpatil.me</title>
+    <title>SMTP Mail - kunalpatil.me</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
